added lang attribute

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Здесь следует добавить "http://www.w3.org/TR/html4/loose.dtd" -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<html lang="en">
   <!-- Теги title и meta нужно поместить в тег head -->
   <head>
     <!-- в закрывающем теге title не хватало слэша-->
